[package]
name = "iroha-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = {version = "3.1.8", features = ["derive"] }
futures = "0.3.21"
futures-util = {version ="0.3.21", features = ["sink"] }
log = "0.4.16"
rand = "0.8.5"
simplelog = "0.11.2"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "io-std", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1.8"
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
